--- a/charts/pulsar/templates/grafana-service.yaml
+++ b/charts/pulsar/templates/grafana-service.yaml
@@ -36,8 +36,8 @@ spec:
     - name: server
       port: {{ .Values.grafana.service.port }}
       targetPort: {{ .Values.grafana.service.targetPort }}
-      {{- if eq .Values.grafana.service.type "NodePort" }}
-      nodePort: {{ .Values.grafana.ports.nodePort }}
+      {{- if and .Values.grafana.service.nodePort }}
+      nodePort: {{ .Values.grafana.service.nodePort }}
       {{- end }}
       protocol: TCP
   selector:
