--- a/charts/pulsar/templates/pulsar-manager-service.yaml
+++ b/charts/pulsar/templates/pulsar-manager-service.yaml
@@ -34,8 +34,8 @@ spec:
     - name: server
       port: {{ .Values.pulsar_manager.service.port }}
       targetPort: {{ .Values.pulsar_manager.service.targetPort }}
-      {{- if eq .Values.pulsar_manager.service.type "NodePort" }}
-      nodePort: {{ .Values.pulsar_manager.ports.nodePort }}
+      {{- if .Values.pulsar_manager.service.nodePort }}
+      nodePort: {{ .Values.pulsar_manager.service.nodePort }}
       {{- end }}
       protocol: TCP
   selector:
