--- a/charts/pulsar/templates/pulsar-manager-service.yaml
+++ b/charts/pulsar/templates/pulsar-manager-service.yaml
@@ -34,6 +34,7 @@ spec:
     - name: server
       port: {{ .Values.pulsar_manager.service.port }}
       targetPort: {{ .Values.pulsar_manager.service.targetPort }}
+      nodePort: {{ .Values.pulsar_manager.service.nodePort }}
       protocol: TCP
   selector:
     app: {{ template "pulsar.name" . }}
