--- a/examples/values-tls.yaml
+++ b/examples/values-tls.yaml
@@ -30,5 +30,6 @@ tls:
 # issue selfsigning certs
 certs:
   internal_issuer:
+    apiVersion: cert-manager.io/v1
     enabled: true
     type: selfsigning
